# orion-kmer

./: Gemini.Prompt.md  Jules.Prompt.md  README.md  SPECS.md  find_hybrid_samples.py  gut_hybrid_results.json  hybrid_biosamples.json  hybrid_data_summary.tsv  results.json  summarize_hybrid.py  test_find_hybrid_samples.py
docs/: Gemfile  _config.yml  index.md
docs/_includes/: sidebar.html
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/tutorials/: build_tutorial.md  classify_tutorial.md  compare_tutorial.md  count_tutorial.md  query_tutorial.md
docs/tutorials/data/: genome1.fasta  genome2.fasta  reads.fastq
entrez-tool/: config.yaml  entrez_query.py  pixi.toml  results.json
orion-kmer/: .gitignore  Cargo.toml  README.md
orion-kmer/src/: cli.rs  db_types.rs  errors.rs  kmer.rs  lib.rs  main.rs  utils.rs
orion-kmer/src/commands/: build.rs  classify.rs  compare.rs  count.rs  mod.rs  query.rs
orion-kmer/tests/: build_tests.rs  classify_tests.rs  compare_tests.rs  count_tests.rs  query_tests.rs
orion-kmer/tests/data/: test_input1.fasta.7z  test_input1.fasta.xz  test_input1.fasta.zst  test_input2.fastq.7z  test_input2.fastq.xz  test_input2.fastq.zst
