[package]
name = "orion-kmer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
needletail = "0.5"
rayon = "1.8"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.0"
num_cpus = "1.16"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
indicatif = "0.17" # For progress bars
psutil = "3.2"     # For system utilities like RAM usage

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
